# goit-pythonweb-hw-04

./: README.md  main.py  pyproject.toml  requirements.txt
source/: document.docx
